# torcs_ros

./: .gitignore  README.md
common/: bzConsoleIndicators.py  bzConsoleInput.py  bzGearLUT.py  bzGeometricFuncs.py  bzReadTrajectoryParams.py  bzReadYAML.py  bzVector.py
data_handling/: readme  synchronized_data_logger.py
network_training/: nvdia_network.py
std_msgs_stamped/: CMakeLists.txt  package.xml
std_msgs_stamped/msg/: UInt32Stamped.msg
torcs_img_publisher/: CMakeLists.txt  package.xml
torcs_img_publisher/config/: torcs_img_publisher.yaml
torcs_img_publisher/include/torcs_img_publisher/: torcs_img_publisher.h
torcs_img_publisher/launch/: torcs_img_publisher.xml
torcs_img_publisher/src/: torcs_img_publisher.cpp
torcs_msgs/: CMakeLists.txt  package.xml
torcs_msgs/msg/: Int8Stamped.msg  TORCSCtrl.msg  TORCSGlobal.msg  TORCSSensors.msg
torcs_ros_NN_conrol/: NN_control_node.py
torcs_ros_bringup/: CMakeLists.txt  package.xml
torcs_ros_bringup/config/: torcs.rviz
torcs_ros_bringup/launch/: torcs_ros.launch
torcs_ros_client/: CMakeLists.txt  package.xml
torcs_ros_client/config/: torcs_ros_client.yaml
torcs_ros_client/include/torcs_ros_client/: torcs_ros_client_node.h
torcs_ros_client/launch/: torcs_ros_client.xml  torcs_ros_client_ns.xml  torcs_ros_client_only.xml  torcs_ros_client_rest.xml  torcs_ros_watchdog_only.xml
torcs_ros_client/src/: torcs_ros_client_gamestate.py  torcs_ros_client_node.cpp  torcs_ros_client_watchdog_node.py
torcs_ros_datalogging/: CMakeLists.txt  data_logger_parameters.yaml  package.xml  synchronized_data_logger.py
torcs_ros_datalogging/launch/: torcs_ros_datalogging.xml
torcs_ros_datalogging/scripts/: data-processor.py
torcs_ros_datalogging/src/: torcs_ros_datalogging.py  torcs_ros_datalogging3.py
torcs_ros_drive_ctrl/: CMakeLists.txt  package.xml
torcs_ros_drive_ctrl/config/: torcs_ros_drive_ctrl.yaml
torcs_ros_drive_ctrl/include/torcs_ros_drive_ctrl/: torcs_ros_drive_ctrl_node.h
torcs_ros_drive_ctrl/launch/: torcs_ros_drive_ctrl.xml
torcs_ros_drive_ctrl/src/: torcs_ros_drive_ctrl_node.cpp
torcs_ros_nn_control/: CMakeLists.txt  package.xml
torcs_ros_trajectory/: CMakeLists.txt  package.xml
torcs_ros_trajectory/src/: Trajectory_generation.py  torcs_ros_trajectory.py
torcs_ros_trajectory_ctrl/: CMakeLists.txt  package.xml
torcs_ros_trajectory_ctrl/launch/: torcs_ros_trajectory_ctrl.xml
torcs_ros_trajectory_ctrl/src/: torcs_ros_trajectory_ctrl.py
torcs_ros_trajectory_gen/: CMakeLists.txt  package.xml
torcs_ros_trajectory_gen/include/torcs_ros_trajectory_gen/: trajectory_params.yaml
torcs_ros_trajectory_gen/launch/: torcs_ros_trajectory_gen.xml
torcs_ros_trajectory_gen/src/: Trajectory_generation.py  geometric_funcs.py  torcs_ros_trajectory.py  torcs_ros_trajectory_gen.py
torcs_ros_trajectory_selection/: CMakeLists.txt  package.xml
torcs_ros_trajectory_selection/include/torcs_ros_trajectory_selection/: simulation_params.yaml
torcs_ros_trajectory_selection/launch/: torcs_ros_trajectory_selection.xml
torcs_ros_trajectory_selection/src/: nengo_nets_memories.py  nengo_nets_qnet_associative.py  nengo_nets_subnetworks.py  plot_XY  ros_to_nengo_nodes.py  torcs_ros_trajectory_selection.py
