<?xml version="1.0"?>
<package>
  <name>torcs_ros_bringup</name>
  <version>0.0.0</version>
  <description>The torcs_ros_bringup package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="florian.mirus@gmx.net">Florian Mirus</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


 <buildtool_depend>catkin</buildtool_depend>


</package>
